--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,12 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
 .feedback-form {
   display: flex;
   flex-direction: column;
-  margin: 24px;
+  border-radius: 8px;
+  padding: 24px;
   width: 408px;
   height: 296px;
+  background: #fff;
 }
 
 .email-style {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
-.extarea-style {
+.message-style {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-top: 8px;
+  text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.email-input-style {
+  margin-top: 8px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+}
+.textarea-style {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 80px;
+  margin-top: 8px;
+}
+.button {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  background: #4e75ff;
+  margin-top: 16px;
 }
